...
                isSettingsPresented = true
            }
        }
    }

    private var updatePlanButton: some View {
        DSButtonView(label: "Update meal plan", variant: .primary, action: {
            isSettingsPresented = false

            onUpdatePlan()
        })
            .padding(.top, DSSpace.xs.value)
    }

    private var titleView: some View {
        Text("Buon appetit!")
            .font(.dsTitleL)
            .foregroundStyle(DSColor.textVibrantPrimary.value)
            .frame(height: 52)
    }
}

...
