...
        private func showDiscardAlert(onComplete: @escaping () -> Void ) {
            modelManager.present(
                content: .init(
                    title: "Discard changes?",
                    message: "If you leave now, your changes will be lost.",
                    buttons: [
                        .init(label: "Keep editing", variant: .primary, action: ({
                            self.modelManager.dismiss()
                        })),
                        .init(label: "Discard changes", variant: .secondary, action: ({
                            self.modelManager.dismiss()
                            onComplete()
                        }))
                    ]
                )
            )
...
