...

        self._value = State(wrappedValue: viewModel.budget)
    }

    var body: some View {
        MealPlanSectionWrapperView(
            title: "What's your budget?",
            content: {
                BedgetSettingInputView(value: $value, range: viewModel.budgetRange)
            },
            action: {
                actionButtonView
            }
...
